Fix title spacing

--- a/frontend/styles/misc.css
+++ b/frontend/styles/misc.css
@@ -26,3 +26,8 @@
   overflow: hidden;
   color: white;
 }
+
+.page-title {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
